[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "pynx"
version = "0.1.0"
description = "Nginx-like async edge router / reverse proxy in pure Python."
readme = "README.md"
requires-python = ">=3.10"
license = {text = "MIT"}
authors = [{name="Kubenew"}]
dependencies = [
  "starlette>=0.37.2",
  "uvicorn>=0.30.0",
  "httpx>=0.27.0",
  "pyyaml>=6.0.1",
  "typer>=0.12.3",
  "prometheus-client>=0.20.0",
]

[project.scripts]
pynx = "pynx.cli:app"
